# reba

./: .env  .gitignore  README.md  docker-compose.yaml  index_transformed.csv  main.py
scripts/: .dockerignore  Dockerfile  msodbcsql17.sh  pyproject.toml
scripts/airflow_image/: requirements.txt
scripts/dags/: config.py  dags.py  tasks.py
scripts/data_analysis/: data_analysis.ipynb  index.csv  index_transformed.csv
scripts/data_preparation/: dags_functions.py  logger.py
scripts/data_preparation/database/: client.py  models.py
scripts/data_preparation/migrations/: env.py  run_migrations.py
scripts/data_preparation/migrations/versions/: a277d9d55446_.py
scripts/data_preparation/process_data/: functions.py  getters.py  loaders.py  transformers.py
scripts/docker_images/airflow_image/: Dockerfile
scripts/docker_images/sql_server_image/: entrypoint.sh  query.sql  setup.sql
scripts/sql_server_image/: Dockerfile  configure-db.sh  entrypoint.sh  setup.sql
terraform/: providers.tf  storage.tf
